# poker-coach

./: .gitignore  README.md  poker_coach_PRD.md  pyproject.toml
docs/plans/: 2026-03-08-poker-coach-design.md  2026-03-08-poker-coach-implementation.md
poker_coach/: cli.py  config.py  game_loop.py  main.py
poker_coach/coach/: api.py  evaluator.py  prompt.py  session_log.py
poker_coach/engine/: deck.py  game_state.py  hand_eval.py  npc.py  player.py  positions.py
tests/: test_betting_fixes.py  test_cli.py  test_config.py  test_game_loop.py  test_parse_action.py
tests/coach/: test_api.py  test_evaluator.py  test_prompt.py  test_session_log.py
tests/engine/: test_deck.py  test_game_state.py  test_hand_eval.py  test_npc.py  test_positions.py  test_winner.py
